--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,13 @@
   margin-top: 1.5rem;
   padding: 0 10rem;
 }
-
+.markdown{
+  border: solid 1px gray;
+  padding: 10px;
+  background: white;
+  border-radius: 10px;
+  height: 600px;
+}
 body{
   font-family: "Outfit",sans-serif;
 }
