--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,18 @@
   border-radius: 10px;
   height: 600px;
 }
+.markdown_dialog{
+  border: solid 1px gray;
+  padding: 10px;
+  background: white;
+  border-radius: 10px;
+  height: 500px;
+}
 body{
   font-family: "Outfit",sans-serif;
+}
+.avatar{
+  border:solid 1px gray;
+  padding: 5px;
+  margin:10px;
 }
